--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     // 2. Fetch the Python file from your repo
     // If the file is in the same repo and same branch:
-    let response = await fetch('matula.py'); // adjust path if in a folder
+    let response = await fetch('tree_statistics.py'); // adjust path if in a folder
     let code = await response.text();
 
     // 3. Run the Python code in Pyodide
@@ -22,7 +22,7 @@
 
     // 4. Call a function from the loaded Python code
     // Example: calling square(10) if your functions.py has `def square(x): ...`
-    let result = pyodide.runPython('vertices(10)');
+    // let result = pyodide.runPython('vertices(10)');
 
     // 5. Display result in HTML
     document.getElementById('output').textContent = 'Result: ' + result;
@@ -244,21 +244,23 @@ function renderTree(elements) {
    DUMMY PROPERTY FUNCTIONS
    (You will later replace these with real metrics)
 ---------------------------------------------------------- */
-function computeNodeCount(tree) {
-  return "dummy node count";
+function computefunction(x) {
+    return pyodide.runPython(`vertices(${x})`);
 }
 
-function computeTreeHeight(tree) {
-  return "dummy height";
+function computefunction(x) {
+    return pyodide.runPython(`edges(${x})`);
 }
 
-function computePrimeFactors(tree) {
-  return "dummy factorization";
+function computefunction(x) {
+    return pyodide.runPython(`height(${x})`);
 }
 
-function computeBranchingFactor(tree) {
-  return "dummy branching";
+
+function computefunction(x) {
+    return pyodide.runPython(`height(${x})`);
 }
+
 
 /* ----------------------------------------------------------
    FILL PROPERTIES TABLE
@@ -268,10 +270,10 @@ function updateProperties(tree) {
   table.innerHTML = "";
 
   const metrics = [
-    { name: "Number of nodes", value: computeNodeCount(tree) },
-    { name: "Tree height", value: computeTreeHeight(tree) },
-    { name: "Prime factors", value: computePrimeFactors(tree) },
-    { name: "Branching factor", value: computeBranchingFactor(tree) },
+    { name: "Number of vertices", value: vertices(${x}) },
+    { name: "Number of edges", value: edges(${x}) },
+    { name: "Height", value: height(${x}) },
+    { name: "No. of branching vertices", value: number_branching_vertices(${x}) },
   ];
 
   metrics.forEach((m, i) => {
@@ -321,6 +323,7 @@ plot(); // auto-run
 
 </body>
 </html>
+
 
 
 
