--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <h2>Matula Number → Rooted Tree (Interactive)</h2>
 
   <p>Enter a natural number:</p>
-  <input id="numInput" type="number" min="1" value="30" style="width:150px;">
+  <input id="numInput" type="number" min="1" style="width:150px;">
   <button onclick="plot()">Plot Tree</button>
   <button onclick="saveImage()">Save Plot</button>
 
@@ -294,3 +294,4 @@ plot(); // auto-run
 
 </body>
 </html>
+
