--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
 
 <!-- RIGHT SIDE: TREE + CONTROLS -->
 <div id="mainPanel">
-  <h2>Matula Number → Rooted Tree (Interactive)</h2>
+  <h2>Generate Rooted Trees from their Matula Numbers</h2>
 
   <div class="controls">
-    <label>Enter a natural number: </label>
-    <input id="numInput" type="number" min="1" value="30" style="width:160px;">
+    <label>Enter a Natural Number: </label>
+    <input id="numInput" type="number" min="1" style="width:160px;">
     <button id="plotBtn">Plot Tree</button>
     <button id="saveBtn">Save Plot</button>
     <button id="centerBtn">Recenter Layout</button>
