--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   <div class="controls">
     <label>Enter a Natural Number: </label>
-    <input id="numInput" type="number" min="1" style="width:160px;">
+    <input id="numInput" type="number" min="1" value="100" style="width:160px;">
     <button id="plotBtn">Plot Tree</button>
     <button id="saveBtn">Save Plot</button>
     <button id="centerBtn">Recenter Layout</button>
