--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
 </div>
 
 <!-- RIGHT SIDE: TREE + CONTROLS -->
-<div id="mainPanel">
+  
+<div style="text-align:center;">
   <h2>Generate Rooted Trees from their Matula Numbers</h2>
 
-  <div class="controls">
+  <div>
     <label>Enter a Natural Number: </label>
     <input id="numInput" type="number" min="1" value="100" style="width:160px;">
     <button id="plotBtn">Plot Tree</button>
@@ -95,8 +96,7 @@
     <button id="centerBtn">Recenter Layout</button>
   </div>
 
-  <div id="cy"></div>
-</div>
+  </div>
 
 <script>
 /* ----------------------
