--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <div style="text-align:center;">
   <h2>Generate Rooted Trees from their Matula Numbers</h2>
 
-  <div>
+  <div id="cy"></div>  
     <label>Enter a Natural Number: </label>
     <input id="numInput" type="number" min="1" value="100" style="width:160px;">
     <button id="plotBtn">Plot Tree</button>
@@ -95,6 +95,19 @@
     <button id="centerBtn">Recenter Layout</button>
   </div>
 </div>
+
+<div style="text-align:center;">
+  <h2>Generate Rooted Trees from their Matula Numbers</h2>
+  <h4>(Move the vertices to improve the plots if necessarily.)</h4>
+
+  <label>Enter a Natural Number: </label>
+  <input id="numInput" type="number" min="1" value="100" style="width:160px;">
+  <button id="plotBtn">Plot Tree</button>
+  <button id="saveBtn">Save Plot</button>
+  <button id="centerBtn">Recenter Layout</button>
+</div>
+  
+<div id="cy"></div>
 
 <script>
 /* ----------------------
