--- a/index.html
+++ b/index.html
@@ -75,39 +75,33 @@
         <th>Value</th>
       </tr>
     </thead>
-    <tbody>
-      <!-- Rows are inserted dynamically -->
-    </tbody>
+    <tbody></tbody>
   </table>
 
-  <p class="note">Metrics computed directly from integer n (Matula correspondence).</p>
+  <p class="note">
+    Metrics are computed directly from the Matula number.
+  </p>
 </div>
 
-<!-- RIGHT SIDE: TREE + CONTROLS -->
-<div style="text-align:center;">
-  <h2>Generate Rooted Trees from their Matula Numbers</h2>
+<!-- RIGHT SIDE -->
+<div id="mainPanel">
 
-  <div id="cy"></div>  
+  <!-- CENTERED HEADER + INPUTS -->
+  <div style="text-align:center;">
+    <h2>Generate Rooted Trees from their Matula Numbers</h2>
+    <h4>(Move the vertices to improve the plot if necessary)</h4>
+
     <label>Enter a Natural Number: </label>
     <input id="numInput" type="number" min="1" value="100" style="width:160px;">
     <button id="plotBtn">Plot Tree</button>
     <button id="saveBtn">Save Plot</button>
     <button id="centerBtn">Recenter Layout</button>
   </div>
-</div>
 
-<div style="text-align:center;">
-  <h2>Generate Rooted Trees from their Matula Numbers</h2>
-  <h4>(Move the vertices to improve the plots if necessarily.)</h4>
+  <!-- PLOT AREA MUST BE OUTSIDE THE CENTERED DIV -->
+  <div id="cy"></div>
 
-  <label>Enter a Natural Number: </label>
-  <input id="numInput" type="number" min="1" value="100" style="width:160px;">
-  <button id="plotBtn">Plot Tree</button>
-  <button id="saveBtn">Save Plot</button>
-  <button id="centerBtn">Recenter Layout</button>
 </div>
-  
-<div id="cy"></div>
 
 <script>
 /* ----------------------
