--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
       height: 560px;
       border: 2px solid #ccc;
       border-radius: 6px;
-      margin-top: 8px;
+      margin: 20px auto;
+      display: block;
     }
 
     .controls { margin-bottom: 8px; }
