Update instruction text for dragging vertices

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <!-- TOP CENTERED CONTROLS -->
   <div style="text-align:center;">
     <h2>Generate Rooted Trees from their Matula Numbers</h2>
-    <h4>(Move the vertices to improve the plots if necessary.)</h4>
+    <h4>(Please drag vertices to improve the plots if necessary.)</h4>
 
     <label>Enter a Natural Number: </label>
     <input id="numInput" type="number" min="1" value="125" style="width:160px;">
