--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <!-- LEFT SIDE: PROPERTIES TABLE -->
 <div id="propertiesPanel">
-  <h3>Properties</h3>
+  <h3>Properties of the Rooted Tree</h3>
 
   <table id="propTable">
     <thead>
