--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     <input id="numInput" type="number" min="1" value="125" style="width:160px;">
     <button id="plotBtn">Plot Tree</button>
     <button id="saveBtn">Save Plot</button>
-    <button id="centerBtn">Recenter Layout</button>
+    <button id="centerBtn">Recenter</button>
+    <button id="toggleLabelsBtn">Hide Labels</button>
   </div>
 
   <!-- THE PLOT AREA MUST BE OUTSIDE THE CENTERED DIV -->
@@ -292,6 +293,23 @@ function plot() {
 document.getElementById('plotBtn').addEventListener('click', plot);
 document.getElementById('saveBtn').addEventListener('click', saveImage);
 document.getElementById('centerBtn').addEventListener('click', recenterLayout);
+document.getElementById("toggleLabelsBtn").addEventListener("click", function () {
+
+  if (!cy) return;
+
+  // 1. Hide all labels
+  cy.nodes().forEach(n => {
+    n.style("label", "");
+  });
+
+  // 2. Color only the root node black
+  // Root node is id 'n0' because your tree builder creates it first.
+  const root = cy.$('#n0');
+  if (root) {
+    root.style("background-color", "black");
+    root.style("border-color", "black");
+  }
+});
 
 // Auto plot on load
 plot();
