--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
   </table>
 
   <p class="note">Metrics computed directly from integer n (Matula correspondence).</p>
+  <p class="credits">
+  Developed by <strong>Your Name</strong>
+  </p>
+
+  <ul class="references">
+  <li>Matula, D. W. (1968). A Natural Rooted Tree Enumeration.</li>
+  <li>Emeric Deutsch. (2012) Rooted Tree Statistics from Matula Numbers. Discrete Applied Mathematics, 160(15):23142322.</li>
+  <li>Audace A.V. Dossou-Olory and Sodiq A. Mojeed. (2025) Matula Numbers and their Applications.</li>
+  </ul>
 </div>
 
 <!-- RIGHT SIDE: TREE + CONTROLS -->
