--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
 
     .controls { margin-bottom: 8px; }
     .note { font-size: 12px; color: #555; margin-top: 6px; }
+    .credits {
+  font-size: 12px;
+  color: #444;
+  margin-top: 6px;
+}
+
+.references {
+  font-size: 12px;
+  color: #444;
+  margin-top: 4px;
+  padding-left: 18px;
+}
+
+.references li {
+  margin-bottom: 4px;
+}
+
   </style>
 </head>
 
@@ -78,8 +95,7 @@
     </thead>
     <tbody></tbody>
   </table>
-
-  <p class="note">Metrics computed directly from integer n (Matula correspondence).</p>
+    <p class="note">Metrics computed directly from integer n (Matula correspondence).</p>
   <p class="credits">
   Developed by <strong>Your Name</strong>
   </p>
@@ -89,6 +105,7 @@
   <li>Emeric Deutsch. (2012) Rooted Tree Statistics from Matula Numbers. Discrete Applied Mathematics, 160(15):23142322.</li>
   <li>Audace A.V. Dossou-Olory and Sodiq A. Mojeed. (2025) Matula Numbers and their Applications.</li>
   </ul>
+  
 </div>
 
 <!-- RIGHT SIDE: TREE + CONTROLS -->
