--- a/index.html
+++ b/index.html
@@ -97,8 +97,15 @@
   </table>
     <p class="note">Metrics computed directly from integer n (Matula correspondence).</p>
   <p class="credits">
-  Developed by <strong>Your Name</strong>
-  </p>
+  Developed by <strong>
+    <a href="https://www.mojeedsodiq.com/"
+       target="_blank"
+       rel="noopener">
+      Sodiq Mojeed
+    </a>
+  </strong>
+</p>
+
 
   <ul class="references">
   <li>David W. Matula (1968). A Natural Rooted Tree Enumeration by Prime Factorization. SIAM Review, 10(2):273.</li>
