--- a/index.html
+++ b/index.html
@@ -275,7 +275,13 @@ function updatePropertiesFromMetrics(n) {
     ['Internal path length', metrics.internalPathLength],
     ['Visitation length', metrics.visitationLength],
     ['Maximum vertex degree', metrics.maximumVertexDegree],
-    ['Number of branches (also, the # of prime factors of n with multiplicity)', metrics.numberOfPrimeFactors]
+    ['Number of branches (also, the # of prime factors of n with multiplicity)', metrics.numberOfPrimeFactors],
+    ['Wiener Index', WienerIndex(n)],
+    ['First Zagreb Index', FirstZagrebIndex(n)],
+    ['Second Zagreb Index', SecondZagrebIndex(n)],
+    ['Narumi–Katayama Index', NarumiKatayama(n)],
+    ['FMZI', FMZI(n)],
+    ['SMZI', SMZI(n)]
   ];
 
   rows.forEach((r, i) => {
