--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </thead>
     <tbody></tbody>
   </table>
-    <p class="note">Metrics computed directly from integer n (Matula correspondence).</p>
+    <p class="note">Metrics computed directly from the Matula number of the rooted tree.</p>
   <p class="credits">
   Developed by <strong>
     <a href="https://www.mojeedsodiq.com/"
