--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@ function updatePropertiesFromMetrics(n) {
     ['First Zagreb Index', FirstZagrebIndex(n)],
     ['Second Zagreb Index', SecondZagrebIndex(n)],
     ['Narumi–Katayama Index', NarumiKatayama(n)],
-    ['First Zagreb Index', FMZI(n)],
-    ['Second Zagreb Index', SMZI(n)]
+    ['First Multiplicative Zagreb Index', FMZI(n)],
+    ['Second Multiplicative Zagreb Index', SMZI(n)]
   ];
 
   rows.forEach((r, i) => {
