--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <ul class="references">
   <li>David W. Matula (1968). A Natural Rooted Tree Enumeration by Prime Factorization. SIAM Review, 10(2):273.</li>
   <li>Emeric Deutsch (2012). Rooted Tree Statistics from Matula Numbers. Discrete Applied Mathematics, 160(15):23142322.</li>
-  <li>A.V. Dossou-Olory, A., & A. Mojeed, S. (2025). Matula Numbers and their Applications. IntechOpen. doi: 10.5772/intechopen.1006120</li>
+  <li>A.V. Dossou-Olory, A., & A. Mojeed, S. (2025). Matula Numbers and their Applications. IntechOpen. doi: 10.5772/intechopen.1006120.</li>
   </ul>
   
 </div>
